# 2025-final-command-team-19-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/repos/: client_repository.py  partner_repository.py  s3_utils.py
src/api/routes/: clients.py  partners.py
src/api/schemas/: client_schemas.py  default_schemas.py  partner_schemas.py
src/api/services/: auth_service.py  client_service.py  db_service.py  partner_service.py  s3_service.py
src/tests/: test1.py
src/tests/integration_tests/: test_01_technical.py
src/tests/unit/: partners_test.py  test2.py
